Working MVC and Functioning API

--- a/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Home/Index.cshtml
+++ b/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about <a href="#">building Web apps with ASP.NET Core</a>.</p>
 
     <p>View our <a href="@Url.Action("Index", "Customer")">Customers</a>.</p>
 </div>
