Full CRUD for Customer and Ticket

--- a/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Home/Index.cshtml
+++ b/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Home/Index.cshtml
@@ -7,4 +7,5 @@
     <p>Learn about <a href="#">building Web apps with ASP.NET Core</a>.</p>
 
     <p>View our <a href="@Url.Action("Index", "Customer")">Customers</a>.</p>
+    <p>View our <a href="@Url.Action("Index", "Ticket")">Tickets</a>.</p>
 </div>
