--- a/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Customer/Index.cshtml
+++ b/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Customer/Index.cshtml
@@ -55,9 +55,8 @@
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.CustomerId }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.CustomerId })
             </td>
         </tr>
 }
