--- a/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Customer/Delete.cshtml
+++ b/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Customer/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model CW_DSCC_10983_MVC.Models.Customer
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Customer";
 }
 
-<h1>Delete</h1>
+<h1>Delete Customer</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4>Are you sure you want to delete this?</h4>
 <div>
     <h4>Customer</h4>
     <hr />
