--- a/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Customer/Index.cshtml
+++ b/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Customer/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<CW_DSCC_10983_MVC.Models.Customer>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Customers List";
 }
 
-<h1>Index</h1>
+<h1>Customers List</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
