--- a/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Shared/_Layout.cshtml
+++ b/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - CW_DSCC_10983_MVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - CW_DSCC_10983_MVC
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
