--- a/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Customer/Create.cshtml
+++ b/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Customer/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CW_DSCC_10983_MVC.Models.Customer
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Customer";
 }
 
-<h1>Create</h1>
+<h1>Create Customer</h1>
 
 <h4>Customer</h4>
 <hr />
