--- a/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Customer/Edit.cshtml
+++ b/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Customer/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CW_DSCC_10983_MVC.Models.Customer
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Customer";
 }
 
-<h1>Edit</h1>
+<h1>Edit Customer</h1>
 
 <h4>Customer</h4>
 <hr />
