--- a/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Ticket/Create.cshtml
+++ b/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Ticket/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CW_DSCC_10983_MVC.Models.Ticket
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Ticket";
 }
 
-<h1>Create</h1>
+<h1>Create Ticket</h1>
 
 <h4>Ticket</h4>
 <hr />
@@ -19,17 +19,34 @@
             </div>
             <div class="form-group">
                 <label asp-for="Departure" class="control-label"></label>
-                <input asp-for="Departure" class="form-control" />
+                <select asp-for="Departure" class="form-control">
+                    <option value="Option1">New York</option>
+                    <option value="Option2">Tashkent</option>
+                    <option value="Option3">Seoul</option>
+                    <option value="Option4">Moscow</option>
+                    <option value="Option5">Ulaanbator</option>
+                </select>
                 <span asp-validation-for="Departure" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Arrival" class="control-label"></label>
-                <input asp-for="Arrival" class="form-control" />
+                <select asp-for="Arrival" class="form-control">
+                    <option value="Option1">New York</option>
+                    <option value="Option2">Tashkent</option>
+                    <option value="Option3">Seoul</option>
+                    <option value="Option4">Moscow</option>
+                    <option value="Option5">Ulaanbator</option>
+                </select>
                 <span asp-validation-for="Arrival" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Priority" class="control-label"></label>
-                <input asp-for="Priority" class="form-control" />
+                <select asp-for="Priority" class="form-control">
+                    <option value="High">High</option>
+                    <option value="Medium">Medium</option>
+                    <option value="Low">Low</option>
+                </select>
                 <span asp-validation-for="Priority" class="text-danger"></span>
             </div>
             <div class="form-group">
