--- a/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Ticket/Delete.cshtml
+++ b/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Ticket/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CW_DSCC_10983_MVC.Models.Ticket
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Ticket";
 }
 
-<h1>Delete</h1>
+<h1>Delete Ticket</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
