--- a/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Ticket/Edit.cshtml
+++ b/CW_DSCC_10983_MVC/CW_DSCC_10983_MVC/Views/Ticket/Edit.cshtml
@@ -21,11 +21,11 @@
             <div class="form-group">
                 <label asp-for="Departure" class="control-label"></label>
                 <select asp-for="Departure" class="form-control">
-                    <option value="Option1">New York</option>
-                    <option value="Option2">Tashkent</option>
-                    <option value="Option3">Seoul</option>
-                    <option value="Option4">Moscow</option>
-                    <option value="Option5">Ulaanbator</option>
+                    <option value="New York">New York</option>
+                    <option value="Tashkent">Tashkent</option>
+                    <option value="Seoul">Seoul</option>
+                    <option value="Moscow">Moscow</option>
+                    <option value="Ulaanbator">Ulaanbator</option>
                 </select>
                 <span asp-validation-for="Departure" class="text-danger"></span>
             </div>
@@ -33,11 +33,11 @@
             <div class="form-group">
                 <label asp-for="Arrival" class="control-label"></label>
                 <select asp-for="Arrival" class="form-control">
-                    <option value="Option1">New York</option>
-                    <option value="Option2">Tashkent</option>
-                    <option value="Option3">Seoul</option>
-                    <option value="Option4">Moscow</option>
-                    <option value="Option5">Ulaanbator</option>
+                    <option value="New York">New York</option>
+                    <option value="Tashkent">Tashkent</option>
+                    <option value="Seoul">Seoul</option>
+                    <option value="Moscow">Moscow</option>
+                    <option value="Ulaanbator">Ulaanbator</option>
                 </select>
                 <span asp-validation-for="Arrival" class="text-danger"></span>
             </div>
